[package]
name = "socks5-proxy"
version = "0.1.1"
authors = ["0xacc"]
edition = "2018"
license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
description="socks5-proxy is a socks5 library based on tokio offering both server and client functions"
repository = "https://github.com/0xacc/socks5-proxy"
readme = "README.md"
categories = ["asynchronous", "network-programming", "proxy"]
keywords = ["async", "socks5", "proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
thiserror = "1.0"
log = "0.4"

